tests/spec/compile-pass/066_runtime_block_on_task.zn
// category: compile-pass
// profile: hosted
// purpose: synchronous entry points can explicitly block on a task through a runtime

module tests.pass.runtimeBlockOnTask;

async fn workAsync() -> Result<Unit, WorkError> {
    return work();
}

fn main() -> Result<Unit, WorkError> {
    var runtime = try Runtime.withWorkerCount(8);
    val task = try runtime.spawn(workAsync());

    try mut runtime.blockOn(move task);
    return Ok(());
}
